<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_main"
        android:title="@string/main"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notifications_none_black_24dp"
        android:title="@string/notification"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

</menu>